--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
-    "sequelize": "^4.43.0"
+    "sequelize": "^4.43.0",
+    "sequelize-cli": "^5.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
