--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.0",
+    "md5": "^2.2.1",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
     "sequelize": "^4.43.0",
