--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start:dev": "nodemon ./bin/www",
+    "dev": "nodemon ./bin/www",
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
