--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-validator": "^5.3.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "jsonwebtoken": "^8.5.0",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
-    "sequelize": "^4.43.0",
+    "sequelize": "^4.43.2",
     "sequelize-cli": "^5.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.11"
   }
 }
