--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "md5": "^2.2.1",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
+    "randomstring": "^1.1.5",
     "sequelize": "^4.43.2",
     "sequelize-cli": "^5.4.0"
   },
